@@ -12,10 +12,11 @@
 asm(".code16");
 
 #include "boot.h"
-#include <stdarg.h>	// include/sandix/stdarg.h
+
+#define NULL	0
 
 void bios_putchar(int ch)
-{
+{	/*
 	struct biosregs ireg;
 
 	initregs(&ireg);
@@ -24,6 +25,14 @@ void bios_putchar(int ch)
 	ireg.ah = 0x0e;
 	ireg.al = ch;
 	intcall(0x10, &ireg, NULL);
+	*/
+
+ 	asm(
+		"movw $0x0007, %bx\n\t"
+		"movw $0x0001, %cx\n\t"
+		"movb $0x0e, %ah\n\t"
+		"int $0x10\n\t"
+	);
 }
 
 void putchar(int ch)
@@ -41,5 +50,5 @@ void puts(const char *str)
 
 int printf(const char *str, ...)
 {
-	
+	return 0;
 }
